--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-te
-  
+<nav></nav>
+
+<ng-view></ng-view>
+
 <script src="https://code.angularjs.org/1.6.5/angular.min.js"></script>
 <script src="https://code.angularjs.org/1.6.5/angular-route.min.js"></script>
 <script src="js/module/module.js"></script>
