--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,8 @@
 <script src="js/components/prepper-stats-component.js"></script>
 <script src="js/components/about-component.js"></script>
 <script src="js/components/location-component.js"></script>
+<script src="js/components/story-component.js"></script>
+<script src="js/components/end-component.js"></script>
 <script src="js/services/service.js"></script>
 </body>
 </html>
