Separating styling into own sheets, uploaded some more images, further styling of components.

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/landing-page.css">
   <link rel="stylesheet" href="css/prepper-stats.css">
+  <link rel="stylesheet" href="css/story.css">
   <link rel="stylesheet" href="css/gas-station.css">
   
 </head>
