This timer though. Also lots of component styling.

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,8 @@
   <link rel="stylesheet" href="css/landing-page.css">
   <link rel="stylesheet" href="css/prepper-stats.css">
   <link rel="stylesheet" href="css/story.css">
-  <link rel="stylesheet" href="css/gas-station.css">
+  <link rel="stylesheet" href="css/locations.css">
+  
   
 </head>
 <body>
