--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/landing-page.css">
   <link rel="stylesheet" href="css/prepper-stats.css">
-  <link rel="stylesheet" href="css/story.css">
-  <link rel="stylesheet" href="css/locations.css">
+  <link rel="stylesheet" href="css/story.css"> 
+  <link rel="stylesheet" href="css/lindsay-locations.css">
   
   
 </head>
