--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/prepper-stats.css">
   <link rel="stylesheet" href="css/story.css"> 
   <link rel="stylesheet" href="css/lindsay-locations.css">
+  <link rel="stylesheet" href="css/end.css">
   
   
 </head>
