Cleaned up image folder, worked on timer, styling, dropshadow effects

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/landing-page.css">
   <link rel="stylesheet" href="css/prepper-stats.css">
   <link rel="stylesheet" href="css/story.css"> 
-  <link rel="stylesheet" href="css/lindsay-locations.css">
+  <link rel="stylesheet" href="css/locations.css">
   <link rel="stylesheet" href="css/end.css">
   
   
